<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">mainmodule</string>
    <string name="service_sos">一键求助</string>
    <string name="service_sos_tip">紧急情况下，点击即可联系救援。若非紧急情况下恶意拨打，需承担相应的法律责任。</string>
    <string name="service_sos_current_location">当前位置（仅供参考）</string>
    <string name="service_sos_load_location">正在获取...</string>
    <string name="service_sos_upload_pic">上传图片</string>
    <string name="service_sos_content">求助内容</string>
    <string name="service_sos_content_max_length">/200</string>
    <string name="service_sos_content_length">0</string>
    <string name="service_sos_hint_content">请简要描述情况...</string>
    <string name="service_sos_content_tip">图片+视频最多9个</string>
    <string name="service_sos_contact_number">电话号码</string>
    <string name="service_sos_content_com">提交</string>
    <string name="service_sos_detail_title">提交信息</string>
    <string name="service_sos_bus">公交查询</string>
    <string name="service_bus_end">输入终点...</string>
    <string name="service_bus_search">查询</string>
    <string name="service_tour_guide_hint">温馨提示</string>
    <string name="service_tour_complaint">你要是遇到“黑导”，可拨打电话进行投诉</string>
    <string name="service_tour_complaint_phone">旅游投诉电话：0991-8808938，0991-8808795</string>
    <string name="service_tour_search_hint">请输入导游姓名或导游证号查询</string>
    <string name="service_travel_search_hint">请输入关键字进行搜索</string>
    <string name="service_train_hint">亲爱的游客，目前平台只支持%s查询功能\n暂未开通购票功能！</string>
    <string name="service_travel_tex">旅游服务</string>
    <string name="service_play_tex">游玩查询</string>
    <string name="service_traffic_tex">交通查询</string>
    <string name="service_public_tex">公众服务</string>
    <string name="service_travel_title">游前服务</string>
    <string name="service_traffic_title">交通服务</string>
    <string name="service_helper_title">文旅助手</string>
    <string name="service_public_title">公共服务</string>
</resources>
