<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.daqsoft.servicemodule.ui.TourGuideActivity">

    <data>

<!--        <variable-->
<!--            name="model"-->
<!--            type="com.daqsoft.travelCultureModule.complaint.ComplaintViewModel" />-->
    </data>

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/dp_30"
        >


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="请输入姓名"
            android:paddingRight="@dimen/dp_30"
            android:paddingTop="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_20"
            android:textColor="@color/txt_black"
            android:textColorHint="@color/txt_gray"
            android:textSize="@dimen/sp_15" />
        <ImageView
            android:id="@+id/img_clear"
            android:paddingEnd="@dimen/dp_30"
            android:paddingTop="@dimen/dp_20"
            android:paddingLeft="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_20"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/service_guide_index_close_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:paddingRight="@dimen/dp_30"
            android:layout_height="@dimen/dp_0_5"
            android:layout_below="@+id/et_name"
            android:background="@color/f5" />

        <TextView
            android:id="@+id/tv_sex"
            android:paddingRight="@dimen/dp_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_name"
            android:background="@null"
            android:clickable="true"
            android:cursorVisible="false"
            android:drawableRight="@mipmap/story_add_arrow"
            android:focusableInTouchMode="false"
            android:hint="请选择导游性别"
            android:paddingTop="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_20"
            android:textColor="@color/txt_black"
            android:textColorHint="@color/txt_gray"
            android:textSize="@dimen/sp_15" />
        <View

            android:layout_width="match_parent"
            android:paddingRight="@dimen/dp_30"
            android:layout_height="@dimen/dp_0_5"
            android:layout_below="@+id/tv_sex"
            android:background="@color/f5" />

        <TextView
            android:id="@+id/tv_query"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sex"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/yellow_radius"
            android:gravity="center"
            android:paddingTop="@dimen/dp_14"
            android:paddingBottom="@dimen/dp_14"
            android:text="@string/service_bus_search"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_17" />
        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/tour_complaint"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_toStartOf="@+id/tv_hint_title"
                android:background="@drawable/et_underline"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_12"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"/>
            <TextView
                android:id="@+id/tv_hint_title"
                android:text="@string/service_tour_guide_hint"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/txt_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  />
            <View
                android:layout_toEndOf="@+id/tv_hint_title"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_12"
                android:background="@drawable/et_underline"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/tour_complaint"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_above="@+id/tv_complaint_phone"
            android:layout_centerHorizontal="true"
            android:text="@string/service_tour_complaint"
            android:layout_width="wrap_content"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/txt_gray"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_complaint_phone"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/txt_gray"
            android:textSize="@dimen/sp_11"
            android:layout_marginBottom="@dimen/dp_50"
            android:text="@string/service_tour_complaint_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</layout>
