<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/service_bus_index_button_nearby_highlighted" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_29"
            android:background="@drawable/service_bus_shape"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20">

            <TextView
                android:id="@+id/service_bus_til"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_28"
                android:text="@string/service_sos_bus"
                android:textColor="@color/service_sos_detail_333"
                android:textSize="@dimen/sp_20"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/service_bus_my_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_39"
                android:background="@null"
                android:text="@string/service_sos_bus"
                android:textColor="@color/service_sos_detail_333"
                android:textSize="@dimen/sp_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/service_bus_til" />

            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_11"
                android:layout_marginRight="@dimen/dp_12"
                android:background="@color/service_bus_lin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/service_bus_exchange"
                app:layout_constraintTop_toBottomOf="@id/service_bus_my_location" />

            <ImageView
                android:id="@+id/service_bus_exchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/service_bus_index_icon_exchange"
                app:layout_constraintBottom_toBottomOf="@id/view1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/view1" />

            <EditText
                android:id="@+id/service_bus_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@null"
                android:hint="@string/service_bus_end"
                android:textColor="@color/service_sos_detail_333"
                android:textColorHint="@color/service_sos_detail_999"
                android:textSize="@dimen/sp_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view1" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_11"
                android:layout_marginRight="@dimen/dp_12"
                android:background="@color/service_bus_lin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/service_bus_exchange"
                app:layout_constraintTop_toBottomOf="@id/service_bus_location" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:background="@drawable/service_bus_5"
                android:gravity="center"
                android:padding="@dimen/dp_14"
                android:text="@string/service_bus_search"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/service_bus_near"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_40"
            android:background="@mipmap/service_bus_index_button_nearby_normal" />
    </FrameLayout>
</layout>

